First draft with questionable or needed translations

--- a/haiku.html
+++ b/haiku.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
+
+<!-- HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH -->
 <head>
+
 <meta charset="UTF-8">
+
 <script type="text/javascript" language="Javascript" src=
 "https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js">
 </script>
+
 <script type="text/javascript" language="Javascript" src=
 "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js">
 </script>
+
 <style type="text/css">
 body {
   background-color:yellow;
@@ -15,7 +21,7 @@ body {
 table {
   border:1px solid black;
 }
-pre {
+menuitem {
   margin:0;
   padding:0;
   display:none;
@@ -42,345 +48,349 @@ pre {
   background-color:white;
 }
 </style>
+
 </head>
+<!-- HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH -->
+<!-- BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB -->
 <body>
 
 <div align="center">
 <table width="400px"><tr align="center"><td id="display"></td></tr></table>
 </div>
 
-<pre class="haiku" id="Afrikaans">
-Te oordeel sonde is sonde.
-God oordeel ons gou genoeg nie.
+<<menuitem class="haiku" id="Afrikaans">
+Te oordeel sonde is sonde.<br />
+God oordeel ons gou genoeg nie.<br />
 Kom ons wees vriende tot dan.
-</pre>
-<pre class="haiku" id="Albanian">
-Duke gjykuar mëkatin është mëkat.
-Perëndia na gjykon mjaft shpejt.
+</menuitem>
+<<menuitem class="haiku" id="Albanian">
+Duke gjykuar mëkatin është mëkat.<br />
+Perëndia na gjykon mjaft shpejt.<br />
 Le të jenë miqtë deri atëherë.
-</pre>
-<pre class="haiku" id="Amharic">
-ኃጢአት ላይ ከመፍረድ ኃጢአት ነው.
-አምላክ በቅርቡ በቂ ይፈርዳል.
+</menuitem>
+<<menuitem class="haiku" id="Amharic">
+ኃጢአት ላይ ከመፍረድ ኃጢአት ነው.<br />
+አምላክ በቅርቡ በቂ ይፈርዳል.<br />
 የአምላክ በዚያን ጊዜ ድረስ ጓደኞች እንሁን.
-</pre>
-<pre class="haiku" id="Arabic">
-الحكم على الخطيئة هي الخطيئة.
-الله يحكم لنا قريبا بما فيه الكفاية.
+</menuitem>
+<<menuitem class="haiku" id="Arabic">
+الحكم على الخطيئة هي الخطيئة.<br />
+الله يحكم لنا قريبا بما فيه الكفاية.<br />
 دعنا نكون أصدقاء حتى ذلك الحين.
-</pre>
-<pre class="haiku" id="Armenian">
-Դատելով մեղքը մեղք է:
-Աստված դատում մեզ շուտով բավարար.
+</menuitem>
+<<menuitem class="haiku" id="Armenian">
+Դատելով մեղքը մեղք է:<br />
+Աստված դատում մեզ շուտով բավարար.<br />
 Եկեք լինի Ընկերներ մինչ այդ:
-</pre>
-<pre class="haiku" id="Azerbaijani">
-günah Münsiflər günahdır.
-Allah bizə tezliklə kifayət qədər hökm.
+</menuitem>
+<<menuitem class="haiku" id="Azerbaijani">
+günah Münsiflər günahdır.<br />
+Allah bizə tezliklə kifayət qədər hökm.<br />
 ardından qədər dost olsun.
-</pre>
-<pre class="haiku" id="Basque">
-sin ikusita sin da.
-Jainkoak epaitu digu bezain azkar.
+</menuitem>
+<<menuitem class="haiku" id="Basque">
+sin ikusita sin da.<br />
+Jainkoak epaitu digu bezain azkar.<br />
 Izan gaitezen lagun ordura arte.
-</pre>
-<pre class="haiku" id="Belarusian">
-Калі судзіць грэх з'яўляецца грахом.
-Бог судзіць нас дастаткова хутка.
+</menuitem>
+<<menuitem class="haiku" id="Belarusian">
+Калі судзіць грэх з'яўляецца грахом.<br />
+Бог судзіць нас дастаткова хутка.<br />
 Давайце будзем сябрамі, пакуль пазней.
-</pre>
-<pre class="haiku" id="Bengali">
-পাপ বিচার পাপ নেই.
-ঈশ্বর আমাদের শীঘ্রই পর্যাপ্ত ফয়সালা করেন.
+</menuitem>
+<<menuitem class="haiku" id="Bengali">
+পাপ বিচার পাপ নেই.<br />
+ঈশ্বর আমাদের শীঘ্রই পর্যাপ্ত ফয়সালা করেন.<br />
 আমাদের তখন পর্যন্ত বন্ধুদের হউক.
-</pre>
-<pre class="haiku" id="Bosnian">
+</menuitem>
+<<menuitem class="haiku" id="Bosnian">
 potreban prevod.
-</pre>
-<pre class="haiku" id="Bulgarian">
+</menuitem>
+<<menuitem class="haiku" id="Bulgarian">
 Превод необходимо.
-</pre>
-<pre class="haiku" id="Catalan">
+</menuitem>
+<<menuitem class="haiku" id="Catalan">
 La traducció necessària.
-</pre>
-<pre class="haiku" id="Cebuano">
+</menuitem>
+<<menuitem class="haiku" id="Cebuano">
 gikinahanglan sa paghubad.
-</pre>
-<pre class="haiku" id="Chichewa">
+</menuitem>
+<<menuitem class="haiku" id="Chichewa">
 Translation zofunika.
-</pre>
-<pre class="haiku" id="Chinese">
-翻译需要。
+</menuitem>
+<<menuitem class="haiku" id="Chinese">
 翻譯需要。
-</pre>
-<pre class="haiku" id="Corsican">
+</menuitem>
+<<menuitem class="haiku" id="Corsican">
 Traduzione bisognu.
-</pre>
-<pre class="haiku" id="Croatian">
+</menuitem>
+<<menuitem class="haiku" id="Croatian">
 Prevođenje potrebno.
-</pre>
-<pre class="haiku" id="Czech">
+</menuitem>
+<<menuitem class="haiku" id="Czech">
 Překlad potřeba.
-</pre>
-<pre class="haiku" id="Danish">
+</menuitem>
+<<menuitem class="haiku" id="Danish">
 Oversættelse nødvendig.
-</pre>
-<pre class="haiku" id="Dutch">
+</menuitem>
+<<menuitem class="haiku" id="Dutch">
 Vertaling nodig.
-</pre>
-<pre class="haiku" id="English">
-'Tis sin to judge sin.
-God sorts us out soon enough.
-Let's be friends 'til then.</pre>
-<pre class="haiku" id="Esperanto">
+</menuitem>
+<<menuitem class="haiku" id="English">
+'Tis sin to judge sin.</br>
+God sorts us out soon enough.</br>
+Let's be friends 'til then.
+</menuitem>
+<<menuitem class="haiku" id="Esperanto">
 Translation bezonis.
-</pre>
-<pre class="haiku" id="Estonian">
+</menuitem>
+<<menuitem class="haiku" id="Estonian">
 Tõlge vaja.
-</pre>
-<pre class="haiku" id="Filipino">
+</menuitem>
+<<menuitem class="haiku" id="Filipino">
 kailangan Translation.
-</pre>
-<pre class="haiku" id="Finnish">
+</menuitem>
+<<menuitem class="haiku" id="Finnish">
 Käännös tarvitaan.
-</pre>
-<pre class="haiku" id="French">
+</menuitem>
+<<menuitem class="haiku" id="French">
 Traduction nécessaire.
-</pre>
-<pre class="haiku" id="Frisian">
+</menuitem>
+<<menuitem class="haiku" id="Frisian">
 Oersetting nedich.
-</pre>
-<pre class="haiku" id="Galician">
+</menuitem>
+<<menuitem class="haiku" id="Galician">
 Tradución necesario.
-</pre>
-<pre class="haiku" id="Georgian">
+</menuitem>
+<<menuitem class="haiku" id="Georgian">
 თარგმანი საჭირო.
-</pre>
-<pre class="haiku" id="German">
+</menuitem>
+<<menuitem class="haiku" id="German">
 Übersetzung benötigt.
-</pre>
-<pre class="haiku" id="Greek">
+</menuitem>
+<<menuitem class="haiku" id="Greek">
 χρειάζεται μετάφραση.
-</pre>
-<pre class="haiku" id="Gujarati">
+</menuitem>
+<<menuitem class="haiku" id="Gujarati">
 અનુવાદ જરૂર છે.
-</pre>
-<pre class="haiku" id="Haitian Creole">
+</menuitem>
+<<menuitem class="haiku" id="Haitian Creole">
 Tradiksyon nesesè.
-</pre>
-<pre class="haiku" id="Hausa">
+</menuitem>
+<<menuitem class="haiku" id="Hausa">
 Translation da ake bukata.
-</pre>
-<pre class="haiku" id="Hawaiian">
+</menuitem>
+<<menuitem class="haiku" id="Hawaiian">
 Translation pono.
-</pre>
-<pre class="haiku" id="Hebrew">
+</menuitem>
+<<menuitem class="haiku" id="Hebrew">
 תרגום הצורך.
-</pre>
-<pre class="haiku" id="Hindi">
+</menuitem>
+<<menuitem class="haiku" id="Hindi">
 अनुवाद की जरूरत है।
-</pre>
-<pre class="haiku" id="Hmong">
+</menuitem>
+<<menuitem class="haiku" id="Hmong">
 Neeg txhais lus yuav tsum tau.
-</pre>
-<pre class="haiku" id="Hungarian">
+</menuitem>
+<<menuitem class="haiku" id="Hungarian">
 Fordítás szükséges.
-</pre>
-<pre class="haiku" id="Icelandic">
+</menuitem>
+<<menuitem class="haiku" id="Icelandic">
 Þýðing þörf.
-</pre>
-<pre class="haiku" id="Igbo">
+</menuitem>
+<<menuitem class="haiku" id="Igbo">
 Translation mkpa.
-</pre>
-<pre class="haiku" id="Indonesian">
+</menuitem>
+<<menuitem class="haiku" id="Indonesian">
 Terjemahan diperlukan.
-</pre>
-<pre class="haiku" id="Irish">
+</menuitem>
+<<menuitem class="haiku" id="Irish">
 Aistriúchán teastáil.
-</pre>
-<pre class="haiku" id="Italian">
+</menuitem>
+<<menuitem class="haiku" id="Italian">
 Traduzione necessario.
-</pre>
-<pre class="haiku" id="Japanese">
+</menuitem>
+<<menuitem class="haiku" id="Japanese">
 翻訳が必要。
-</pre>
-<pre class="haiku" id="Javanese">
-</pre>
-<pre class="haiku" id="Kannada">
+</menuitem>
+<<menuitem class="haiku" id="Javanese">
+</menuitem>
+<<menuitem class="haiku" id="Kannada">
 ಅನುವಾದ ಅಗತ್ಯ.
-</pre>
-<pre class="haiku" id="Kazakh">
+</menuitem>
+<<menuitem class="haiku" id="Kazakh">
 Аударма қажет.
-</pre>
-<pre class="haiku" id="Khmer">
+</menuitem>
+<<menuitem class="haiku" id="Khmer">
 ការបកប្រែត្រូវការជាចាំបាច់។
-</pre>
-<pre class="haiku" id="Korean">
+</menuitem>
+<<menuitem class="haiku" id="Korean">
 번역이 필요합니다.
-</pre>
-<pre class="haiku" id="Kurdish (Kurmanji)">
+</menuitem>
+<<menuitem class="haiku" id="Kurdish (Kurmanji)">
 Werger pêwîst.
-</pre>
-<pre class="haiku" id="Kyrgyz">
+</menuitem>
+<<menuitem class="haiku" id="Kyrgyz">
 Котормо керек.
-</pre>
-<pre class="haiku" id="Lao">
+</menuitem>
+<<menuitem class="haiku" id="Lao">
 ການແປພາສາທີ່ຈໍາເປັນ.
-</pre>
-<pre class="haiku" id="Latin">
-</pre>
-<pre class="haiku" id="Latvian">
+</menuitem>
+<<menuitem class="haiku" id="Latin">
+</menuitem>
+<<menuitem class="haiku" id="Latvian">
 Tulkošana nepieciešams.
-</pre>
-<pre class="haiku" id="Lithuanian">
+</menuitem>
+<<menuitem class="haiku" id="Lithuanian">
 Vertimas reikia.
-</pre>
-<pre class="haiku" id="Lexembourgish">
+</menuitem>
+<<menuitem class="haiku" id="Lexembourgish">
 Iwwersetzung waren.
-</pre>
-<pre class="haiku" id="Macedonian">
+</menuitem>
+<<menuitem class="haiku" id="Macedonian">
 Превод е потребно.
-</pre>
-<pre class="haiku" id="Malagasy">
+</menuitem>
+<<menuitem class="haiku" id="Malagasy">
 Translation ilaina.
-</pre>
-<pre class="haiku" id="Malay">
+</menuitem>
+<<menuitem class="haiku" id="Malay">
 Terjemahan diperlukan.
-</pre>
-<pre class="haiku" id="Malayalam">
+</menuitem>
+<<menuitem class="haiku" id="Malayalam">
 പരിഭാഷ ആവശ്യമായിരുന്നു.
-</pre>
-<pre class="haiku" id="Maltese">
+</menuitem>
+<<menuitem class="haiku" id="Maltese">
 Traduzzjoni meħtieġa.
-</pre>
-<pre class="haiku" id="Maori">
+</menuitem>
+<<menuitem class="haiku" id="Maori">
 Translation hiahiatia.
-</pre>
-<pre class="haiku" id="Marathi">
+</menuitem>
+<<menuitem class="haiku" id="Marathi">
 भाषांतर करणे आवश्यक आहे.
-</pre>
-<pre class="haiku" id="Mongolian">
+</menuitem>
+<<menuitem class="haiku" id="Mongolian">
 Орчуулга хэрэгтэй.
-</pre>
-<pre class="haiku" id="Myanmar (Burmese)">
+</menuitem>
+<<menuitem class="haiku" id="Myanmar (Burmese)">
 ဘာသာပြန်ချက်လိုအပ်ခဲ့ပါတယ်။
-</pre>
-<pre class="haiku" id="Nepali">
+</menuitem>
+<<menuitem class="haiku" id="Nepali">
 अनुवाद आवश्यक।
-</pre>
-<pre class="haiku" id="Norwegian">
+</menuitem>
+<<menuitem class="haiku" id="Norwegian">
 Oversettelse nødvendig.
-</pre>
-<pre class="haiku" id="Pashto">
+</menuitem>
+<<menuitem class="haiku" id="Pashto">
 ژباړه ته اړتیا لري.
-</pre>
-<pre class="haiku" id="Persian">
+</menuitem>
+<<menuitem class="haiku" id="Persian">
 ترجمه مورد نیاز است.
-</pre>
-<pre class="haiku" id="Polish">
+</menuitem>
+<<menuitem class="haiku" id="Polish">
 Tłumaczenie potrzebne.
-</pre>
-<pre class="haiku" id="Portuguese">
+</menuitem>
+<<menuitem class="haiku" id="Portuguese">
 Tradução necessário.
-</pre>
-<pre class="haiku" id="Punjabi">
+</menuitem>
+<<menuitem class="haiku" id="Punjabi">
 ਅਨੁਵਾਦ ਦੀ ਲੋੜ ਸੀ.
-</pre>
-<pre class="haiku" id="Romanian">
+</menuitem>
+<<menuitem class="haiku" id="Romanian">
 E nevoie de traducere.
-</pre>
-<pre class="haiku" id="Russian">
+</menuitem>
+<<menuitem class="haiku" id="Russian">
 E nevoie de traducere.
-</pre>
-<pre class="haiku" id="Samoan">
+</menuitem>
+<<menuitem class="haiku" id="Samoan">
 manaomia Faaliliuga.
-</pre>
-<pre class="haiku" id="Scots Gaelic">
+</menuitem>
+<<menuitem class="haiku" id="Scots Gaelic">
 Eadar-theangachadh a dhìth.
-</pre>
-<pre class="haiku" id="Serbian">
+</menuitem>
+<<menuitem class="haiku" id="Serbian">
 потребан превод.
-</pre>
-<pre class="haiku" id="Sesotho">
+</menuitem>
+<<menuitem class="haiku" id="Sesotho">
 Phetolelo e hlokahalang.
-</pre>
-<pre class="haiku" id="Shona">
+</menuitem>
+<<menuitem class="haiku" id="Shona">
 Translation inodiwa.
-</pre>
-<pre class="haiku" id="Sindhi">
+</menuitem>
+<<menuitem class="haiku" id="Sindhi">
 ترجمو جي ضرورت آهي.
-</pre>
-<pre class="haiku" id="Sinhala">
+</menuitem>
+<<menuitem class="haiku" id="Sinhala">
 පරිවර්තනය අවශ්ය විය.
-</pre>
-<pre class="haiku" id="Slovak">
+</menuitem>
+<<menuitem class="haiku" id="Slovak">
 Preklad potreba.
-</pre>
-<pre class="haiku" id="Slovenian">
+</menuitem>
+<<menuitem class="haiku" id="Slovenian">
 Prevajanje potrebna.
-</pre>
-<pre class="haiku" id="Somali">
+</menuitem>
+<<menuitem class="haiku" id="Somali">
 Translation loo baahan yahay.
-</pre>
-<pre class="haiku" id="Spanish">
+</menuitem>
+<<menuitem class="haiku" id="Spanish">
 La traducción necesaria.
-</pre>
-<pre class="haiku" id="Sundanese">
+</menuitem>
+<<menuitem class="haiku" id="Sundanese">
 Tarjamahan diperlukeun.
-</pre>
-<pre class="haiku" id="Swahili">
+</menuitem>
+<<menuitem class="haiku" id="Swahili">
 Tafsiri inahitajika.
-</pre>
-<pre class="haiku" id="Swedish">
+</menuitem>
+<<menuitem class="haiku" id="Swedish">
 Översättning behövs.
-</pre>
-<pre class="haiku" id="Tajik">
+</menuitem>
+<<menuitem class="haiku" id="Tajik">
 Тарҷумаи лозим.
-</pre>
-<pre class="haiku" id="Tamil">
+</menuitem>
+<<menuitem class="haiku" id="Tamil">
 மொழிபெயர்ப்பு தேவை.
-</pre>
-<pre class="haiku" id="Telugu">
+</menuitem>
+<<menuitem class="haiku" id="Telugu">
 అనువాద అవసరమైన.
-</pre>
-<pre class="haiku" id="Thai">
+</menuitem>
+<<menuitem class="haiku" id="Thai">
 แปลจำเป็น
-</pre>
-<pre class="haiku" id="Turkish">
+</menuitem>
+<<menuitem class="haiku" id="Turkish">
 Çeviri gerekli.
-</pre>
-<pre class="haiku" id="Ukrainian">
+</menuitem>
+<<menuitem class="haiku" id="Ukrainian">
 потрібен переклад.
-</pre>
-<pre class="haiku" id="Urdu">
+</menuitem>
+<<menuitem class="haiku" id="Urdu">
 ہے.ترجمے کی ضرورت.
-</pre>
-<pre class="haiku" id="Uzbek">
+</menuitem>
+<<menuitem class="haiku" id="Uzbek">
 Tarjima zarur.
-</pre>
-<pre class="haiku" id="Vietnamese">
+</menuitem>
+<<menuitem class="haiku" id="Vietnamese">
 Dịch cần thiết.
-</pre>
-<pre class="haiku" id="Welsh">
+</menuitem>
+<<menuitem class="haiku" id="Welsh">
 angen cyfieithiad.
-</pre>
-<pre class="haiku" id="Xhosa">
+</menuitem>
+<<menuitem class="haiku" id="Xhosa">
 Translation ezifunekayo.
-</pre>
-<pre class="haiku" id="Yiddish">
-דזשאַדזשינג זינד איז זינד.
-גאָט סאָרץ אונדז אויס באַלד גענוג.
-זאל ס זיין Friends ביז דעמאָלט.</pre>
-<pre class="haiku" id="Yoruba">
+</menuitem>
+<<menuitem class="haiku" id="Yiddish">
+דזשאַדזשינג זינד איז זינד.</br>
+גאָט סאָרץ אונדז אויס באַלד גענוג.</br>
+זאל ס זיין Friends ביז דעמאָלט.</menuitem>
+<<menuitem class="haiku" id="Yoruba">
 Translation ti nilo.
-</pre>
-<pre class="haiku" id="Zulu">
+</menuitem>
+<<menuitem class="haiku" id="Zulu">
 Labahumushi lalidinga abantu.
-</pre>
+</menuitem>
 
 <div class="choose">
 </div>
 
+<!-- ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss -->
 <script>
 function show(language, bgcolor='#fff') {
   var source = document.getElementById(language);
@@ -419,6 +429,9 @@ table += '</table>';
 $('.choose').html(table);
 show('English');
 </script>
+<!-- ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss -->
 
 </body>
+<!-- BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB -->
+
 </html>
