--- a/haiku.html
+++ b/haiku.html
@@ -5,6 +5,7 @@
 <head>
 
 <meta charset="UTF-8">
+<title>Haiku (jlettvin@gmail.com)</title>
 
 <script type="text/javascript" language="Javascript" src=
 "https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js">
@@ -21,7 +22,7 @@ body {
 table {
   border:1px solid black;
 }
-menuitem {
+li {
   margin:0;
   padding:0;
   display:none;
@@ -54,338 +55,345 @@ menuitem {
 <!-- BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB -->
 <body>
 
+  <header>
+    <nav>
+      <ul>
+<li class="haiku" id="Afrikaans">
+Te oordeel sonde is sonde.<br />
+God oordeel ons gou genoeg nie.<br />
+Kom ons wees vriende tot dan.
+</li>
+<li class="haiku" id="Albanian">
+Duke gjykuar mëkatin është mëkat.<br />
+Perëndia na gjykon mjaft shpejt.<br />
+Le të jenë miqtë deri atëherë.
+</li>
+<li class="haiku" id="Amharic">
+ኃጢአት ላይ ከመፍረድ ኃጢአት ነው.<br />
+አምላክ በቅርቡ በቂ ይፈርዳል.<br />
+የአምላክ በዚያን ጊዜ ድረስ ጓደኞች እንሁን.
+</li>
+<li class="haiku" id="Arabic">
+الحكم على الخطيئة هي الخطيئة.<br />
+الله يحكم لنا قريبا بما فيه الكفاية.<br />
+دعنا نكون أصدقاء حتى ذلك الحين.
+</li>
+<li class="haiku" id="Armenian">
+Դատելով մեղքը մեղք է:<br />
+Աստված դատում մեզ շուտով բավարար.<br />
+Եկեք լինի Ընկերներ մինչ այդ:
+</li>
+<li class="haiku" id="Azerbaijani">
+günah Münsiflər günahdır.<br />
+Allah bizə tezliklə kifayət qədər hökm.<br />
+ardından qədər dost olsun.
+</li>
+<li class="haiku" id="Basque">
+sin ikusita sin da.<br />
+Jainkoak epaitu digu bezain azkar.<br />
+Izan gaitezen lagun ordura arte.
+</li>
+<li class="haiku" id="Belarusian">
+Калі судзіць грэх з'яўляецца грахом.<br />
+Бог судзіць нас дастаткова хутка.<br />
+Давайце будзем сябрамі, пакуль пазней.
+</li>
+<li class="haiku" id="Bengali">
+পাপ বিচার পাপ নেই.<br />
+ঈশ্বর আমাদের শীঘ্রই পর্যাপ্ত ফয়সালা করেন.<br />
+আমাদের তখন পর্যন্ত বন্ধুদের হউক.
+</li>
+<li class="haiku" id="Bosnian">
+potreban prevod.
+</li>
+<li class="haiku" id="Bulgarian">
+Превод необходимо.
+</li>
+<li class="haiku" id="Catalan">
+La traducció necessària.
+</li>
+<li class="haiku" id="Cebuano">
+gikinahanglan sa paghubad.
+</li>
+<li class="haiku" id="Chichewa">
+Translation zofunika.
+</li>
+<li class="haiku" id="Chinese">
+翻譯需要。
+</li>
+<li class="haiku" id="Corsican">
+Traduzione bisognu.
+</li>
+<li class="haiku" id="Croatian">
+Prevođenje potrebno.
+</li>
+<li class="haiku" id="Czech">
+Překlad potřeba.
+</li>
+<li class="haiku" id="Danish">
+Oversættelse nødvendig.
+</li>
+<li class="haiku" id="Dutch">
+Vertaling nodig.
+</li>
+<li class="haiku" id="English">
+'Tis sin to judge sin.</br>
+God sorts us out soon enough.</br>
+Let's be friends 'til then.
+</li>
+<li class="haiku" id="Esperanto">
+Translation bezonis.
+</li>
+<li class="haiku" id="Estonian">
+Tõlge vaja.
+</li>
+<li class="haiku" id="Filipino">
+kailangan Translation.
+</li>
+<li class="haiku" id="Finnish">
+Käännös tarvitaan.
+</li>
+<li class="haiku" id="French">
+Traduction nécessaire.
+</li>
+<li class="haiku" id="Frisian">
+Oersetting nedich.
+</li>
+<li class="haiku" id="Galician">
+Tradución necesario.
+</li>
+<li class="haiku" id="Georgian">
+თარგმანი საჭირო.
+</li>
+<li class="haiku" id="German">
+Übersetzung benötigt.
+</li>
+<li class="haiku" id="Greek">
+χρειάζεται μετάφραση.
+</li>
+<li class="haiku" id="Gujarati">
+અનુવાદ જરૂર છે.
+</li>
+<li class="haiku" id="Haitian Creole">
+Tradiksyon nesesè.
+</li>
+<li class="haiku" id="Hausa">
+Translation da ake bukata.
+</li>
+<li class="haiku" id="Hawaiian">
+Translation pono.
+</li>
+<li class="haiku" id="Hebrew">
+תרגום הצורך.
+</li>
+<li class="haiku" id="Hindi">
+अनुवाद की जरूरत है।
+</li>
+<li class="haiku" id="Hmong">
+Neeg txhais lus yuav tsum tau.
+</li>
+<li class="haiku" id="Hungarian">
+Fordítás szükséges.
+</li>
+<li class="haiku" id="Icelandic">
+Þýðing þörf.
+</li>
+<li class="haiku" id="Igbo">
+Translation mkpa.
+</li>
+<li class="haiku" id="Indonesian">
+Terjemahan diperlukan.
+</li>
+<li class="haiku" id="Irish">
+Aistriúchán teastáil.
+</li>
+<li class="haiku" id="Italian">
+Traduzione necessario.
+</li>
+<li class="haiku" id="Japanese">
+翻訳が必要。
+</li>
+<li class="haiku" id="Javanese">
+</li>
+<li class="haiku" id="Kannada">
+ಅನುವಾದ ಅಗತ್ಯ.
+</li>
+<li class="haiku" id="Kazakh">
+Аударма қажет.
+</li>
+<li class="haiku" id="Khmer">
+ការបកប្រែត្រូវការជាចាំបាច់។
+</li>
+<li class="haiku" id="Korean">
+번역이 필요합니다.
+</li>
+<li class="haiku" id="Kurdish (Kurmanji)">
+Werger pêwîst.
+</li>
+<li class="haiku" id="Kyrgyz">
+Котормо керек.
+</li>
+<li class="haiku" id="Lao">
+ການແປພາສາທີ່ຈໍາເປັນ.
+</li>
+<li class="haiku" id="Latin">
+</li>
+<li class="haiku" id="Latvian">
+Tulkošana nepieciešams.
+</li>
+<li class="haiku" id="Lithuanian">
+Vertimas reikia.
+</li>
+<li class="haiku" id="Lexembourgish">
+Iwwersetzung waren.
+</li>
+<li class="haiku" id="Macedonian">
+Превод е потребно.
+</li>
+<li class="haiku" id="Malagasy">
+Translation ilaina.
+</li>
+<li class="haiku" id="Malay">
+Terjemahan diperlukan.
+</li>
+<li class="haiku" id="Malayalam">
+പരിഭാഷ ആവശ്യമായിരുന്നു.
+</li>
+<li class="haiku" id="Maltese">
+Traduzzjoni meħtieġa.
+</li>
+<li class="haiku" id="Maori">
+Translation hiahiatia.
+</li>
+<li class="haiku" id="Marathi">
+भाषांतर करणे आवश्यक आहे.
+</li>
+<li class="haiku" id="Mongolian">
+Орчуулга хэрэгтэй.
+</li>
+<li class="haiku" id="Myanmar (Burmese)">
+ဘာသာပြန်ချက်လိုအပ်ခဲ့ပါတယ်။
+</li>
+<li class="haiku" id="Nepali">
+अनुवाद आवश्यक।
+</li>
+<li class="haiku" id="Norwegian">
+Oversettelse nødvendig.
+</li>
+<li class="haiku" id="Pashto">
+ژباړه ته اړتیا لري.
+</li>
+<li class="haiku" id="Persian">
+ترجمه مورد نیاز است.
+</li>
+<li class="haiku" id="Polish">
+Tłumaczenie potrzebne.
+</li>
+<li class="haiku" id="Portuguese">
+Tradução necessário.
+</li>
+<li class="haiku" id="Punjabi">
+ਅਨੁਵਾਦ ਦੀ ਲੋੜ ਸੀ.
+</li>
+<li class="haiku" id="Romanian">
+E nevoie de traducere.
+</li>
+<li class="haiku" id="Russian">
+E nevoie de traducere.
+</li>
+<li class="haiku" id="Samoan">
+manaomia Faaliliuga.
+</li>
+<li class="haiku" id="Scots Gaelic">
+Eadar-theangachadh a dhìth.
+</li>
+<li class="haiku" id="Serbian">
+потребан превод.
+</li>
+<li class="haiku" id="Sesotho">
+Phetolelo e hlokahalang.
+</li>
+<li class="haiku" id="Shona">
+Translation inodiwa.
+</li>
+<li class="haiku" id="Sindhi">
+ترجمو جي ضرورت آهي.
+</li>
+<li class="haiku" id="Sinhala">
+පරිවර්තනය අවශ්ය විය.
+</li>
+<li class="haiku" id="Slovak">
+Preklad potreba.
+</li>
+<li class="haiku" id="Slovenian">
+Prevajanje potrebna.
+</li>
+<li class="haiku" id="Somali">
+Translation loo baahan yahay.
+</li>
+<li class="haiku" id="Spanish">
+La traducción necesaria.
+</li>
+<li class="haiku" id="Sundanese">
+Tarjamahan diperlukeun.
+</li>
+<li class="haiku" id="Swahili">
+Tafsiri inahitajika.
+</li>
+<li class="haiku" id="Swedish">
+Översättning behövs.
+</li>
+<li class="haiku" id="Tajik">
+Тарҷумаи лозим.
+</li>
+<li class="haiku" id="Tamil">
+மொழிபெயர்ப்பு தேவை.
+</li>
+<li class="haiku" id="Telugu">
+అనువాద అవసరమైన.
+</li>
+<li class="haiku" id="Thai">
+แปลจำเป็น
+</li>
+<li class="haiku" id="Turkish">
+Çeviri gerekli.
+</li>
+<li class="haiku" id="Ukrainian">
+потрібен переклад.
+</li>
+<li class="haiku" id="Urdu">
+ہے.ترجمے کی ضرورت.
+</li>
+<li class="haiku" id="Uzbek">
+Tarjima zarur.
+</li>
+<li class="haiku" id="Vietnamese">
+Dịch cần thiết.
+</li>
+<li class="haiku" id="Welsh">
+angen cyfieithiad.
+</li>
+<li class="haiku" id="Xhosa">
+Translation ezifunekayo.
+</li>
+<li class="haiku" id="Yiddish">
+דזשאַדזשינג זינד איז זינד.</br>
+גאָט סאָרץ אונדז אויס באַלד גענוג.</br>
+זאל ס זיין Friends ביז דעמאָלט.</li>
+<li class="haiku" id="Yoruba">
+Translation ti nilo.
+</li>
+<li class="haiku" id="Zulu">
+Labahumushi lalidinga abantu.
+</li>
+      </ul>
+    </nav>
+  </header>
+
 <div align="center">
 <table width="400px"><tr align="center"><td id="display"></td></tr></table>
 </div>
 
-<menuitem class="haiku" id="Afrikaans">
-Te oordeel sonde is sonde.<br />
-God oordeel ons gou genoeg nie.<br />
-Kom ons wees vriende tot dan.
-</menuitem>
-<menuitem class="haiku" id="Albanian">
-Duke gjykuar mëkatin është mëkat.<br />
-Perëndia na gjykon mjaft shpejt.<br />
-Le të jenë miqtë deri atëherë.
-</menuitem>
-<menuitem class="haiku" id="Amharic">
-ኃጢአት ላይ ከመፍረድ ኃጢአት ነው.<br />
-አምላክ በቅርቡ በቂ ይፈርዳል.<br />
-የአምላክ በዚያን ጊዜ ድረስ ጓደኞች እንሁን.
-</menuitem>
-<menuitem class="haiku" id="Arabic">
-الحكم على الخطيئة هي الخطيئة.<br />
-الله يحكم لنا قريبا بما فيه الكفاية.<br />
-دعنا نكون أصدقاء حتى ذلك الحين.
-</menuitem>
-<menuitem class="haiku" id="Armenian">
-Դատելով մեղքը մեղք է:<br />
-Աստված դատում մեզ շուտով բավարար.<br />
-Եկեք լինի Ընկերներ մինչ այդ:
-</menuitem>
-<menuitem class="haiku" id="Azerbaijani">
-günah Münsiflər günahdır.<br />
-Allah bizə tezliklə kifayət qədər hökm.<br />
-ardından qədər dost olsun.
-</menuitem>
-<menuitem class="haiku" id="Basque">
-sin ikusita sin da.<br />
-Jainkoak epaitu digu bezain azkar.<br />
-Izan gaitezen lagun ordura arte.
-</menuitem>
-<menuitem class="haiku" id="Belarusian">
-Калі судзіць грэх з'яўляецца грахом.<br />
-Бог судзіць нас дастаткова хутка.<br />
-Давайце будзем сябрамі, пакуль пазней.
-</menuitem>
-<menuitem class="haiku" id="Bengali">
-পাপ বিচার পাপ নেই.<br />
-ঈশ্বর আমাদের শীঘ্রই পর্যাপ্ত ফয়সালা করেন.<br />
-আমাদের তখন পর্যন্ত বন্ধুদের হউক.
-</menuitem>
-<menuitem class="haiku" id="Bosnian">
-potreban prevod.
-</menuitem>
-<menuitem class="haiku" id="Bulgarian">
-Превод необходимо.
-</menuitem>
-<menuitem class="haiku" id="Catalan">
-La traducció necessària.
-</menuitem>
-<menuitem class="haiku" id="Cebuano">
-gikinahanglan sa paghubad.
-</menuitem>
-<menuitem class="haiku" id="Chichewa">
-Translation zofunika.
-</menuitem>
-<menuitem class="haiku" id="Chinese">
-翻譯需要。
-</menuitem>
-<menuitem class="haiku" id="Corsican">
-Traduzione bisognu.
-</menuitem>
-<menuitem class="haiku" id="Croatian">
-Prevođenje potrebno.
-</menuitem>
-<menuitem class="haiku" id="Czech">
-Překlad potřeba.
-</menuitem>
-<menuitem class="haiku" id="Danish">
-Oversættelse nødvendig.
-</menuitem>
-<menuitem class="haiku" id="Dutch">
-Vertaling nodig.
-</menuitem>
-<menuitem class="haiku" id="English">
-'Tis sin to judge sin.</br>
-God sorts us out soon enough.</br>
-Let's be friends 'til then.
-</menuitem>
-<menuitem class="haiku" id="Esperanto">
-Translation bezonis.
-</menuitem>
-<menuitem class="haiku" id="Estonian">
-Tõlge vaja.
-</menuitem>
-<menuitem class="haiku" id="Filipino">
-kailangan Translation.
-</menuitem>
-<menuitem class="haiku" id="Finnish">
-Käännös tarvitaan.
-</menuitem>
-<menuitem class="haiku" id="French">
-Traduction nécessaire.
-</menuitem>
-<menuitem class="haiku" id="Frisian">
-Oersetting nedich.
-</menuitem>
-<menuitem class="haiku" id="Galician">
-Tradución necesario.
-</menuitem>
-<menuitem class="haiku" id="Georgian">
-თარგმანი საჭირო.
-</menuitem>
-<menuitem class="haiku" id="German">
-Übersetzung benötigt.
-</menuitem>
-<menuitem class="haiku" id="Greek">
-χρειάζεται μετάφραση.
-</menuitem>
-<menuitem class="haiku" id="Gujarati">
-અનુવાદ જરૂર છે.
-</menuitem>
-<menuitem class="haiku" id="Haitian Creole">
-Tradiksyon nesesè.
-</menuitem>
-<menuitem class="haiku" id="Hausa">
-Translation da ake bukata.
-</menuitem>
-<menuitem class="haiku" id="Hawaiian">
-Translation pono.
-</menuitem>
-<menuitem class="haiku" id="Hebrew">
-תרגום הצורך.
-</menuitem>
-<menuitem class="haiku" id="Hindi">
-अनुवाद की जरूरत है।
-</menuitem>
-<menuitem class="haiku" id="Hmong">
-Neeg txhais lus yuav tsum tau.
-</menuitem>
-<menuitem class="haiku" id="Hungarian">
-Fordítás szükséges.
-</menuitem>
-<menuitem class="haiku" id="Icelandic">
-Þýðing þörf.
-</menuitem>
-<menuitem class="haiku" id="Igbo">
-Translation mkpa.
-</menuitem>
-<menuitem class="haiku" id="Indonesian">
-Terjemahan diperlukan.
-</menuitem>
-<menuitem class="haiku" id="Irish">
-Aistriúchán teastáil.
-</menuitem>
-<menuitem class="haiku" id="Italian">
-Traduzione necessario.
-</menuitem>
-<menuitem class="haiku" id="Japanese">
-翻訳が必要。
-</menuitem>
-<menuitem class="haiku" id="Javanese">
-</menuitem>
-<menuitem class="haiku" id="Kannada">
-ಅನುವಾದ ಅಗತ್ಯ.
-</menuitem>
-<menuitem class="haiku" id="Kazakh">
-Аударма қажет.
-</menuitem>
-<menuitem class="haiku" id="Khmer">
-ការបកប្រែត្រូវការជាចាំបាច់។
-</menuitem>
-<menuitem class="haiku" id="Korean">
-번역이 필요합니다.
-</menuitem>
-<menuitem class="haiku" id="Kurdish (Kurmanji)">
-Werger pêwîst.
-</menuitem>
-<menuitem class="haiku" id="Kyrgyz">
-Котормо керек.
-</menuitem>
-<menuitem class="haiku" id="Lao">
-ການແປພາສາທີ່ຈໍາເປັນ.
-</menuitem>
-<menuitem class="haiku" id="Latin">
-</menuitem>
-<menuitem class="haiku" id="Latvian">
-Tulkošana nepieciešams.
-</menuitem>
-<menuitem class="haiku" id="Lithuanian">
-Vertimas reikia.
-</menuitem>
-<menuitem class="haiku" id="Lexembourgish">
-Iwwersetzung waren.
-</menuitem>
-<menuitem class="haiku" id="Macedonian">
-Превод е потребно.
-</menuitem>
-<menuitem class="haiku" id="Malagasy">
-Translation ilaina.
-</menuitem>
-<menuitem class="haiku" id="Malay">
-Terjemahan diperlukan.
-</menuitem>
-<menuitem class="haiku" id="Malayalam">
-പരിഭാഷ ആവശ്യമായിരുന്നു.
-</menuitem>
-<menuitem class="haiku" id="Maltese">
-Traduzzjoni meħtieġa.
-</menuitem>
-<menuitem class="haiku" id="Maori">
-Translation hiahiatia.
-</menuitem>
-<menuitem class="haiku" id="Marathi">
-भाषांतर करणे आवश्यक आहे.
-</menuitem>
-<menuitem class="haiku" id="Mongolian">
-Орчуулга хэрэгтэй.
-</menuitem>
-<menuitem class="haiku" id="Myanmar (Burmese)">
-ဘာသာပြန်ချက်လိုအပ်ခဲ့ပါတယ်။
-</menuitem>
-<menuitem class="haiku" id="Nepali">
-अनुवाद आवश्यक।
-</menuitem>
-<menuitem class="haiku" id="Norwegian">
-Oversettelse nødvendig.
-</menuitem>
-<menuitem class="haiku" id="Pashto">
-ژباړه ته اړتیا لري.
-</menuitem>
-<menuitem class="haiku" id="Persian">
-ترجمه مورد نیاز است.
-</menuitem>
-<menuitem class="haiku" id="Polish">
-Tłumaczenie potrzebne.
-</menuitem>
-<menuitem class="haiku" id="Portuguese">
-Tradução necessário.
-</menuitem>
-<menuitem class="haiku" id="Punjabi">
-ਅਨੁਵਾਦ ਦੀ ਲੋੜ ਸੀ.
-</menuitem>
-<menuitem class="haiku" id="Romanian">
-E nevoie de traducere.
-</menuitem>
-<menuitem class="haiku" id="Russian">
-E nevoie de traducere.
-</menuitem>
-<menuitem class="haiku" id="Samoan">
-manaomia Faaliliuga.
-</menuitem>
-<menuitem class="haiku" id="Scots Gaelic">
-Eadar-theangachadh a dhìth.
-</menuitem>
-<menuitem class="haiku" id="Serbian">
-потребан превод.
-</menuitem>
-<menuitem class="haiku" id="Sesotho">
-Phetolelo e hlokahalang.
-</menuitem>
-<menuitem class="haiku" id="Shona">
-Translation inodiwa.
-</menuitem>
-<menuitem class="haiku" id="Sindhi">
-ترجمو جي ضرورت آهي.
-</menuitem>
-<menuitem class="haiku" id="Sinhala">
-පරිවර්තනය අවශ්ය විය.
-</menuitem>
-<menuitem class="haiku" id="Slovak">
-Preklad potreba.
-</menuitem>
-<menuitem class="haiku" id="Slovenian">
-Prevajanje potrebna.
-</menuitem>
-<menuitem class="haiku" id="Somali">
-Translation loo baahan yahay.
-</menuitem>
-<menuitem class="haiku" id="Spanish">
-La traducción necesaria.
-</menuitem>
-<menuitem class="haiku" id="Sundanese">
-Tarjamahan diperlukeun.
-</menuitem>
-<menuitem class="haiku" id="Swahili">
-Tafsiri inahitajika.
-</menuitem>
-<menuitem class="haiku" id="Swedish">
-Översättning behövs.
-</menuitem>
-<menuitem class="haiku" id="Tajik">
-Тарҷумаи лозим.
-</menuitem>
-<menuitem class="haiku" id="Tamil">
-மொழிபெயர்ப்பு தேவை.
-</menuitem>
-<menuitem class="haiku" id="Telugu">
-అనువాద అవసరమైన.
-</menuitem>
-<menuitem class="haiku" id="Thai">
-แปลจำเป็น
-</menuitem>
-<menuitem class="haiku" id="Turkish">
-Çeviri gerekli.
-</menuitem>
-<menuitem class="haiku" id="Ukrainian">
-потрібен переклад.
-</menuitem>
-<menuitem class="haiku" id="Urdu">
-ہے.ترجمے کی ضرورت.
-</menuitem>
-<menuitem class="haiku" id="Uzbek">
-Tarjima zarur.
-</menuitem>
-<menuitem class="haiku" id="Vietnamese">
-Dịch cần thiết.
-</menuitem>
-<menuitem class="haiku" id="Welsh">
-angen cyfieithiad.
-</menuitem>
-<menuitem class="haiku" id="Xhosa">
-Translation ezifunekayo.
-</menuitem>
-<menuitem class="haiku" id="Yiddish">
-דזשאַדזשינג זינד איז זינד.</br>
-גאָט סאָרץ אונדז אויס באַלד גענוג.</br>
-זאל ס זיין Friends ביז דעמאָלט.</menuitem>
-<menuitem class="haiku" id="Yoruba">
-Translation ti nilo.
-</menuitem>
-<menuitem class="haiku" id="Zulu">
-Labahumushi lalidinga abantu.
-</menuitem>
 
 <div class="choose">
 </div>
