First draft with questionable or needed translations

--- a/haiku.html
+++ b/haiku.html
@@ -390,13 +390,33 @@ Labahumushi lalidinga abantu.
     </nav>
   </header>
 
-<div align="center">
-<table width="400px"><tr align="center"><td id="display"></td></tr></table>
-</div>
+  <section>
+    <article>
+
+      <header>
+        <h2>Haiku (jlettvin@gmail.com)</h2>
+      </header>
+
+      <div align="center">
+        <table width="400px"><tr align="center"><td id="display">
+        </td></tr></table>
+      </div>
+    </article>
+  </section>
 
 
-<div class="choose">
-</div>
+  <section>
+    <article>
+      <div class="choose">
+      </div>
+    </article>
+  </section>
+
+  <footer>
+    <small>
+      Copyright&copy; 2016 Jonathan D. Lettvin, All Rights Reserved
+    </small>
+  </footer>
 
 <!-- ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss -->
 <script>
