--- a/haiku.html
+++ b/haiku.html
@@ -19,6 +19,15 @@
 body {
   background-color:yellow;
 }
+header {
+  text-align:center;
+  font-size:20pt;
+}
+footer {
+  text-align:center;
+  font-size:8pt;
+}
+
 table {
   border:1px solid black;
 }
@@ -394,7 +403,7 @@ Labahumushi lalidinga abantu.
     <article>
 
       <header>
-        <h2>Haiku (jlettvin@gmail.com)</h2>
+        Haiku (jlettvin@gmail.com)
       </header>
 
       <div align="center">
@@ -413,9 +422,7 @@ Labahumushi lalidinga abantu.
   </section>
 
   <footer>
-    <small>
-      Copyright&copy; 2016 Jonathan D. Lettvin, All Rights Reserved
-    </small>
+    Copyright&copy; 2016 Jonathan D. Lettvin, All Rights Reserved
   </footer>
 
 <!-- ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss -->
