First draft with questionable or needed translations

--- a/haiku.html
+++ b/haiku.html
@@ -1,82 +1,7 @@
-<!DOCTYPE html>
-
-<html>
-<head> <!-- HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH -->
-
-<meta charset="UTF-8">
-<title>Haiku (jlettvin@gmail.com)</title>
-
-<!-- ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss -->
-<script type="text/javascript" language="Javascript" src=
-"https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js">
-</script>
-
-<script type="text/javascript" language="Javascript" src=
-"https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js">
-</script>
-
-<style type="text/css">
-
-/* tag controls tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt */
-/* tag names are all lowercase */
-body {
-  background-color:yellow;
-}
-table {
-  border:1px solid black;
-}
-li {
-  display:none;
-}
-
-/* class controls cccccccccccccccccccccccccccccccccccccccccccccccccccccccccc */
-/* class names are capitalized */
-.Language {
-  color:white;
-  background-color:black;
-  font-size:10pt;
-  text-align:center;
-}
-.Language:hover {
-  color:black;
-  background-color:white;
-  text-align:center;
-}
-.Haiku {
-  visibility:hidden;
-}
-
-/* id controls iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii */
-/* id names are all caps */
-#TITLE_DIV {
-  text-align:center;
-}
-#TITLE_TXT {
-  font-size:15pt;
-}
-#LEGAL {
-  font-size:10pt;
-  text-align:center;
-}
-#HAIKU_BOX {
-  width:250pt;
-  background-color:white;
-}
-#HAIKU_TXT {
-  height:70pt;  /* Determined by trial-and-error */
-  white-space:pre;
-  font-size:12pt;
-  text-align:center;
-}
-</style>
-
-</head> <!-- HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH -->
-
-<body> <!-- BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB -->
-
-  <header>
-    <nav>
-      <ul>
+<header>
+  <nav>
+    <div>
+      <ul> <!-- Start of Content -->
 <li class="haiku" id="Afrikaans">
 Te oordeel sonde is sonde.
 God oordeel ons gou genoeg nie.
@@ -405,85 +330,7 @@ Translation ti nilo.
 <li class="haiku" id="Zulu">
 Labahumushi lalidinga abantu.
 </li>
-      </ul>
-    </nav>
-  </header>
-
-  <section>
-    <article>
-
-      <header>
-        <div id="TITLE_DIV">
-          <b id="TITLE_TXT">Haiku (jlettvin@gmail.com)<b> <!-- Title appears here -->
-        </div>
-      </header>
-
-      <div align="center">
-        <table id="HAIKU_BOX" width="250pt"><tr align="center">
-            <td id="HAIKU_TXT"></td> <!-- Translation text appears here -->
-        </tr></table>
-      </div>
-    </article>
-  </section>
-
-  <section>
-    <article>
-      <div class="MENU"></div> <!-- MENU appears here -->
-    </article>
-  </section>
-
-  <footer>
-    <div id="LEGAL">
-      Copyright&copy; 2016 Jonathan D. Lettvin, All Rights Reserved
+      </ul> <!-- End of Content -->
     </div>
-  </footer>
-
-  <script> /* ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss */
-//(function() {
-document.haiku = {speaking:'English'};
-function display(language) {
-  // This function copies a hidden haiku to the display table cell.
-  var source = document.getElementById(language);
-  var target = document.getElementById('HAIKU_TXT');
-  target.innerHTML = source.innerHTML.trim() || "Translation needed.";
-}
-
-// These functions handle mouse hover display changes.  CSS handles bgcolor.
-function mouseEnter(language) {                  display(language); }
-function mouseLeave(language) {   display(document.haiku.speaking); }
-function mouseClick(language) { document.haiku.speaking = language; }
-
-var haiku = $('.haiku');        // Fetch list of all hidden text
-var languages = haiku.length;   // Count the languages
-var width = 6;                  // Specify horizontal language count
-
-// Generate the menu on-the-fly from language names (id value of haiku)
-var table = '<table align="center">';
-for (var row of _.range(0, languages, width)) {
-  // Make a new table row
-  table += '<tr>';
-  for (var col of _.range(width)) {
-    var I = row + col;
-    var language = I;
-    if (language >= languages) break;  // Quit if no more languages.
-    var element = haiku[language];
-    var id = element.id;
-    var onEnter = ' onmouseenter="mouseEnter(\'' + id + '\')"';
-    var onLeave = ' onmouseleave="mouseLeave(\'' + id + '\')"';
-    var onClick =      ' onclick="mouseClick(\'' + id + '\')"';
-    var onMouse = onEnter + onLeave + onClick;
-    table += '<td class="Language" ' + onMouse + '>' + id + '</td>';
-  }
-  table += '</tr>';
-}
-table += '</table>';
-
-$('.MENU').html(table);         // Fill the menu with the generated table
-
-display(document.haiku.speaking); // Initialize display for default language.
-//})();
-  </script> <!-- ssssssssssssssssssssssssssssssssssssssssssssssssssssssssss -->
-
-</body> <!-- BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB -->
-
-</html>
+  </nav>
+</header>
