--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Haiku (jlettvin@gmail.com)</title>
-  <link rel="stylesheet" href="haiku.css">
-  <!--
-  <link rel="import" href="haiku.html">
-  -->
-</head>
 
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Haiku (jlettvin@gmail.com)</title>
+    <link rel="stylesheet" href="haiku.css">
+  </head>
 
-  <link rel="import" href="haiku.html">
+  <body>
+
+    <!--
+    <link rel="import" href="haiku.html">
+    -->
 
 <header>
   <nav>
@@ -351,45 +351,47 @@ Labahumushi lalidinga abantu.
   </nav>
 </header>
 
-  <section>
-    <article>
+    <section>
+      <article>
 
-      <header>
-        <div id="TITLE_DIV">
-          <b id="TITLE_TXT">Haiku (jlettvin@gmail.com)<b> <!-- Title appears here -->
+        <header>
+          <div id="TITLE_DIV">
+            <b id="TITLE_TXT">Haiku (jlettvin@gmail.com)<b> <!-- Title here -->
+          </div>
+        </header>
+
+        <div      id="HAIKU_DIV" align="center">  <!-- TODO fix CSS align -->
+          <table  id="HAIKU_BOX"><tr>
+              <td id="HAIKU_TXT"></td> <!-- Translation text here -->
+          </tr></table>
         </div>
-      </header>
+      </article>
+    </section>
 
-      <div      id="HAIKU_DIV" align="center">  <!-- TODO fix CSS align -->
-        <table  id="HAIKU_BOX"><tr>
-            <td id="HAIKU_TXT"></td> <!-- Translation text appears here -->
-        </tr></table>
+    <section>
+      <article>
+        <div class="MENU"></div> <!-- MENU appears here -->
+      </article>
+    </section>
+
+    <footer>
+      <div id="LEGAL">
+        Copyright&copy; 2016 Jonathan D. Lettvin, All Rights Reserved
       </div>
-    </article>
-  </section>
+    </footer>
 
-  <section>
-    <article>
-      <div class="MENU"></div> <!-- MENU appears here -->
-    </article>
-  </section>
-
-  <footer>
-    <div id="LEGAL">
-      Copyright&copy; 2016 Jonathan D. Lettvin, All Rights Reserved
-    </div>
-  </footer>
-
-  <script type="text/javascript" language="Javascript" src=
+    <script type="text/javascript" language="Javascript" src=
 "https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js">
-  </script>
+    </script>
 
-  <script type="text/javascript" language="Javascript" src=
+    <script type="text/javascript" language="Javascript" src=
 "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js">
-  </script>
+    </script>
 
-  <script type="text/javascript" language="Javascript" src="haiku.js"></script>
+    <script type="text/javascript" language="Javascript" src=
+"haiku.js">
+    </script>
 
-</body>
+  </body>
 
 </html>
