--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Haiku (jlettvin@gmail.com)</title>
-    <link rel="stylesheet" href="haiku.css">
+    <link rel="stylesheet" href="index.css">
   </head>
 
   <body>
@@ -389,7 +389,7 @@ Labahumushi lalidinga abantu.
     </script>
 
     <script type="text/javascript" language="Javascript" src=
-"haiku.js">
+"index.js">
     </script>
 
   </body>
