--- a/index.html
+++ b/index.html
@@ -389,6 +389,10 @@ Labahumushi lalidinga abantu.
     </script>
 
     <script type="text/javascript" language="Javascript" src=
+"https://cdnjs.cloudflare.com/ajax/libs/require.js/2.2.0/require.min.js">
+    </script>
+
+    <script type="text/javascript" language="Javascript" src=
 "index.js">
     </script>
 
