--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@ Labahumushi lalidinga abantu.
           <table  id="HAIKU_BOX"><tr>
               <td id="HAIKU_TXT"></td> <!-- Translation text here -->
           </tr></table>
+          <i id="DIRECTIONS">Click on a language to make it the default</i>
         </div>
       </article>
     </section>
