still working on require(haiku.js)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 
+<!--
+TODO:
+  Modify index.js to require('haiku.js');  rather than explicit text in UL.
+-->
+
 <html>
 
   <head>
