--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ Labahumushi lalidinga abantu.
               <td id="HAIKU_TXT"></td> <!-- Translation text here -->
           </tr></table>
           <i id="DIRECTIONS">
-            Hover on a language to show a translation.<br />
+            Hover on a language to show a translation.
             Click on a language to make it the default
           </i>
         </div>
