debugging browser dependencies

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ Labahumushi lalidinga abantu.
 
         <header>
           <div id="TITLE_DIV">
-            <b id="TITLE_TXT">Haiku (jlettvin@gmail.com)<b> <!-- Title here -->
+            <b id="TITLE_TXT">Haiku (jlettvin@gmail.com)</b><!-- Title here -->
           </div>
         </header>
 
@@ -373,6 +373,7 @@ Labahumushi lalidinga abantu.
             Hover on a language to show a translation.
             Click on a language to make it the default
           </i>
+          <i id="BROWSER"></b>
         </div>
       </article>
     </section>
@@ -388,6 +389,10 @@ Labahumushi lalidinga abantu.
         Copyright&copy; 2016 Jonathan D. Lettvin, All Rights Reserved
       </div>
     </footer>
+
+    <script type="text/javascript" language="Javascript" src=
+"https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+    </script>
 
     <script type="text/javascript" language="Javascript" src=
 "https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js">
